kcm_regionandlang: chop off .UTF-8 suffix from locale before adding

BUG: 508092

The ICU locale name doesn't have .UTF-8 suffix, but the localectl list-locales output does